--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,4 +1,7 @@
-{% extends '_layout.twig' %}
+{% include 'partials/_header.twig' %}
+{% include 'partials/_nav.twig' %}
+{% include 'partials/_carousel.twig' %}
 {% block main %}
 
 {% endblock %}
+{% include 'partials/_footer.twig' %}
