--- a/templates/_galleries.twig
+++ b/templates/_galleries.twig
@@ -10,8 +10,9 @@
 				{% for img in images %}
 					<div class="col-12 col-md-6 col-lg-3 mx-auto p-3 my-5">
 						<a class="set-gallery-img-link" href="{{ img.getUrl() }}" data-lightbox="image-{{ loop.index }}"
-						   data-title="{{ img.fileName }}">
+						   data-title="{{ block.fullCaption }}">
 							<img src="{{ img.getUrl() }}" alt="" class="img-fluid">
+							<p>{{ block.shortCaption }}</p>
 						</a>
 					</div>
 				{% endfor %}
