--- a/templates/partials/_header.twig
+++ b/templates/partials/_header.twig
@@ -15,6 +15,8 @@
 	<!-- Lightbox -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
 
+	<!-- OWL CAROUSEL -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
 	<!-- Custom CSS -->
 	<link rel="stylesheet" href="/webpack/main.css">
 </head>
