--- a/templates/partials/_carousel.twig
+++ b/templates/partials/_carousel.twig
@@ -1,15 +1,25 @@
 <div class="container" id="carousel">
-	<div class="row">
-		<div class="col-12">
-			<div class="owl-carousel">
-				{% set Entries = craft.entries().all() %}
-				{% for entry in Entries %}
-					{% set images = entry.pageEntyImage %}
-				<div class="carousel_item" {% for img in images %} style="background-image: url({{ img.getUrl()}})" {% endfor %}>
-				<h1>{{ entry.title }}</h1>
-				</div>
-				{% endfor %}
-			</div>
-		</div>
-	</div>
+    <div class="row">
+        <div class="col-12">
+            <div class="owl-carousel">
+                {% set Entries = craft.entries().all() %}
+                {% for entry in Entries %}
+                    {% set images = entry.pageEntyImage %}
+                    <div class="carousel_item" {% for img in images %} style="background-image: url({{ img.getUrl() }})" {% endfor %}>
+                        <a href="">
+                        {% set categories = entry.category %}
+                        {% if categories|length %}
+                        {% for rel in categories %}
+                            <h6> {{ rel.title }}</h6>
+                        {% endfor %}
+                        {% endif %}
+                        <h1>{{ entry.title }}</h1>
+                            <p>View</p>
+                        </a>
+                    </div>
+
+                {% endfor %}
+            </div>
+        </div>
+    </div>
 </div>
