--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -1,5 +1,64 @@
+.video-featured-entry {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 .index-card{
-  .index-card-cat{
+  padding: 3rem;
+}
+  .index-card-cat {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  h1 {
+    a {
+      text-decoration: none;
+      color: #000000;
+    }
+
+    a:hover {
+      color: #cdaf88;
+    }
+  }
+
+  hr{
+    background-color: #cdaf88;
+    width: 80%;
+    height: 2px;
+  }
+
+  .index-card-socials{
+    a{
+      color: #cdaf88;
+      padding: 0 3px;
+      ion-icon{
+        color:#cdaf88;
+      }
+    }
+  }
+}
+
+
+.index-card {
+  width: 90%;
+  margin: 2rem auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 0px 5px 0px #000000;
+  border-radius: 2px;
+
+  .index-card-text-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2.5rem;
+  }
+
+  .index-card-cat {
     color: #2a3135;
     border: 2px solid #cdaf88;
     padding: 4px 6px 4px 6px;
@@ -7,20 +66,60 @@
     font-size: 10px;
     line-height: 13px;
     margin: 0 2px 25px;
-    text-decoration:none;
+    text-decoration: none;
     font-weight: bold;
     display: inline-block;
     width: auto;
     text-transform: uppercase;
   }
-  h3{
+
+  .index-card-auth {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 12px;
+    padding: 15px 0 10px;
+  }
+
+  .index-card-content {
+    margin: 1rem 0;
+  }
+
+  .index-card-cta {
+    color: #2a3135;
+    letter-spacing: 1px !important;
+    font-size: 10px;
+    font-weight: bold;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1.5rem 0;
+
+    ion-icon {
+      color: #cdaf88;
+      padding: 0 5px;
+    }
+  }
+
+  .index-card-cta:hover {
+    color: #cdaf88;
+  }
+
+  h3 {
     font-size: 24px;
     line-height: 24px;
     letter-spacing: 1px;
     font-weight: 700;
-    a{
+    text-align: center;
+
+    a {
       text-decoration: none;
       color: #2a3135;
+    }
+
+    a:hover {
+      color: #cdaf88;
     }
   }
 }
