--- a/src/sass/components/_sidebar.scss
+++ b/src/sass/components/_sidebar.scss
@@ -1,19 +1,97 @@
-#sidebar{
+#sidebar {
   margin-left: auto;
+
   #bio {
     position: relative;
+
+    h1 {
+      margin-top: 1rem;
+    }
+
     img {
       border-radius: 50%;
       height: 8rem;
       width: 8rem;
       margin: 0 auto;
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .bio-copy {
+      padding: 3em 0;
     }
   }
 
+
+  #recent-posts {
+    .sidebar-title {
+      text-transform: uppercase;
+      font-weight: bold;
+      font-size: 10px;
+      letter-spacing: 2px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+    }
+
+    .gold-line {
+      display: block;
+      //width: 50px;
+      flex-grow: 1;
+      margin: 0 5px;
+      height: 1px;
+      padding: 0;
+      border-bottom: 2px solid #cdaf88
+    }
+
+    ul {
+      list-style: none;
+      padding-inline-start: 20px;
+
+      li {
+        border-bottom: 1px solid #ede7dc;
+        line-height: 16px;
+        margin-bottom: 10px;
+        padding-bottom: 10px;
+
+        a {
+          padding: 8px 0;
+          text-decoration: none;
+          color: inherit;
+        }
+
+        a:hover {
+          color: #cdaf88;
+        }
+      }
+    }
+
+    .socials {
+      display: flex;
+      justify-content: center;
+      padding: 10px 0;
+
+      a {
+        text-decoration: none;
+        padding: 5px;
+        ion-icon {
+          color: #2a3135;
+        }
+      }
+
+      a:hover {
+        ion-icon {
+          color: #cdaf88;
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 575.98px) {
-  #sidebar{
+  #sidebar {
     margin-left: 0;
   }
 }
