--- a/src/sass/components/_sidebar.scss
+++ b/src/sass/components/_sidebar.scss
@@ -5,7 +5,13 @@
     position: relative;
 
     h1 {
-      margin-top: 1rem;
+      margin-top: 30px;
+      text-align: center;
+      text-transform: uppercase;
+      font-weight: bold;
+      color: #2a3135;
+      font-size: 16px;
+      padding: 15px 0;
     }
 
     img {
@@ -76,6 +82,7 @@
       a {
         text-decoration: none;
         padding: 5px;
+
         ion-icon {
           color: #2a3135;
         }
