--- a/templates/components/_recent-posts.twig
+++ b/templates/components/_recent-posts.twig
@@ -1,4 +1,18 @@
 <div class="container-fluid my-5" id="recent-posts">
+
+    <!-- SEARCH FORM -->
+    <div class="row py-3">
+        <div class="col-12">
+            <form action="{{ url('search/results') }}">
+                <div class="input-group">
+                    <input class="form-control" type="search" name="q" aria-label="Search" placeholder="Search">
+                    <button type="submit">Go</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+
     <!-- POSTS -->
     <div class="row py-3">
         <div class="col-12">
