--- a/templates/components/_sidebar.twig
+++ b/templates/components/_sidebar.twig
@@ -1,4 +1,4 @@
-<div class="col-12 col-lg-3 bg-light p-3 my-5" id="sidebar">
+<div class="col-12 col-lg-3 p-3 my-5" id="sidebar">
 {% include "components/_bio.twig" %}
 {% include "components/_recent-posts.twig" %}
 </div>
