--- a/templates/_page-entry.twig
+++ b/templates/_page-entry.twig
@@ -1,9 +1,9 @@
 {% include 'partials/_header.twig' %}
 {% include 'partials/_nav.twig' %}
-<div class="container-fluid page-entry tan-bg py-5">
+<div class="container-fluid page-entry py-5">
 	<div class="container border-shadow my-5">
 		<div class="row">
-			<div class="col-12 col-md-10 mx-auto bg-light p-3 my-5">
+			<div class="col-12 col-md-10 mx-auto p-3 my-5">
 				{% block main %}
 					{{ entry.pageContent }}
 				{% endblock %}
