--- a/templates/partials/_carousel.twig
+++ b/templates/partials/_carousel.twig
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-12">
             <div class="owl-carousel">
-                {% set Entries = craft.entries().all() %}
+                {% set Entries = craft.entries().section(['blog','videos']).all() %}
                 {% for entry in Entries %}
                     {% set images = entry.pageEntyImage %}
                     <div class="carousel_item" {% for img in images %} style="background-image: url({{ img.getUrl() }})" {% endfor %}>
