--- a/templates/partials/_nav.twig
+++ b/templates/partials/_nav.twig
@@ -1,6 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Eighth navbar example">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" aria-label="Eighth navbar example">
     <div class="container">
-        <a class="navbar-brand" href="#">Container</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07"
                 aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,6 +19,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/videos">Videos</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/galleries">Gallery</a>
+                </li>
             </ul>
             <form action="{{ url('search/results') }}">
                 <input class="form-control" type="search" name="q" aria-label="Search" placeholder="Search">
@@ -27,3 +29,4 @@
         </div>
     </div>
 </nav>
+
