fixing socials links

--- a/src/sass/components/_carousel.scss
+++ b/src/sass/components/_carousel.scss
@@ -13,7 +13,7 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        background-color: rgba(0,0,0, .5);
+        background-color: rgba(0, 0, 0, .5);
 
         h6 {
           text-transform: uppercase;
@@ -33,9 +33,40 @@
           font-weight: bold !important;
           line-height: 30px;
         }
-        p{
+
+        p {
           font-weight: bold;
         }
+      }
+    }
+
+    .owl-nav {
+      .owl-prev,
+      .owl-next {
+        position: absolute;
+        top: 0;
+
+        span {
+          font-size: 50px !important;
+          color: #cdaf88;
+          line-height: 20px;
+          display: inline-block;
+          padding: 10px 20px 25px 20px;
+          background-color: rgba(59, 56, 56, 0.68);
+          border-radius: 50%;
+        }
+      }
+
+      .owl-prev {
+        left: 0;
+        top: 0;
+        transform: translate(-50%, 200%);
+      }
+
+      .owl-next {
+        top: 0;
+        right: 0;
+        transform: translate(50%, 200%);
       }
     }
   }
