--- a/templates/partials/_header.twig
+++ b/templates/partials/_header.twig
@@ -23,10 +23,10 @@
 </head>
 <body>
 
-<div class="container-fluid p-0" id="parallax" style="height: 400px; overflow: hidden">
+<div class="container-fluid p-0" id="parallax" style=" ">
     <div class="row">
         <div class="col-12 p-0">
-            <img class="img-fluid" src="/images/09/Masada2LogoCentered.jpg" alt="">
+{#            <img class="img-fluid" src="/images/09/Masada2LogoCentered.jpg" alt="">#}
         </div>
     </div>
 </div>
