--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -50,7 +50,8 @@
 
 
 .index-card {
-  width: 90%;
+  //width: 90%;
+  width: 100%;
   margin: 2rem auto;
   display: flex;
   flex-direction: column;
