--- a/templates/partials/_header.twig
+++ b/templates/partials/_header.twig
@@ -5,7 +5,19 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="description" content="Take a Closer look Ministries">
+    <meta property="og:title" content="Take a Closer look Ministries">
+    <meta property="og:description" content="Take a Closer look Ministries">
+    <meta property="og:image" content="https://www.mywebsite.com/image.jpg">
+    <meta property="og:image:alt" content="Take a Closer look Ministries Image">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="Take a Closer look Ministries">
+    <meta property="og:url" content="https://www.mywebsite.com/page">
+    <link rel="canonical" href="https://www.mywebsite.com/page">
+
+
+    <title>Take a Closer look Ministries</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -18,7 +30,7 @@
     <!-- OWL CAROUSEL -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
 
-	<!-- Custom CSS -->
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="/webpack/main.css">
 </head>
 <body>
@@ -26,7 +38,7 @@
 <div class="container-fluid p-0" id="parallax" style=" ">
     <div class="row">
         <div class="col-12 p-0">
-{#            <img class="img-fluid" src="/images/09/Masada2LogoCentered.jpg" alt="">#}
+            {# <img class="img-fluid" src="/images/09/Masada2LogoCentered.jpg" alt=""> #}
         </div>
     </div>
 </div>
