adding the view text

--- a/templates/videos/index.twig
+++ b/templates/videos/index.twig
@@ -17,7 +17,7 @@
                     <hr>
                     <a class="index-card-cta" href="{{ entry.url }}">
                         <ion-icon name="book"></ion-icon>
-                        Read article</a>
+                        View</a>
                     <div class="index-card-socials">
                         <a href="">
                             <ion-icon name="logo-facebook"></ion-icon>
