--- a/templates/components/_recent-posts.twig
+++ b/templates/components/_recent-posts.twig
@@ -53,17 +53,14 @@
                 <a href="https://www.facebook.com/TakeACloserLookMinistries1/" target="_blank">
                     <ion-icon name="logo-facebook"></ion-icon>
                 </a>
-                <a href="https://twitter.com/share?url=https://takeacloserlookministries.com/video-test/&text=Video%20Test" target="_blank">
-                    <ion-icon name="logo-twitter"></ion-icon>
-                </a>
-                <a href="https://www.pinterest.com/pin/create/button/?url=https://takeacloserlookministries.com/video-test/&media=&description=Video%20Test" target="_blank">
-                    <ion-icon name="logo-pinterest"></ion-icon>
-                </a>
                 <a href="mailto:?subject=I wanted to share this post with you from Take A Closer Look Ministries &amp;body=Video Test    https://takeacloserlookministries.com/video-test/" title="Email to a friend/colleague">
                     <ion-icon name="mail"></ion-icon>
                 </a>
-                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Ftakeacloserlookministries.com%2Fvideo-test%2F" target="_blank">
-                    <ion-icon name="logo-linkedin"></ion-icon>
+                <a href="https://m.youtube.com/channel/UCRCsP7R_HPvW8cG0rSMYvYg" target="_blank">
+                    <ion-icon name="logo-youtube"></ion-icon>
+                </a>
+                <a href="https://www.instagram.com/ryan.cataldo.3/" target="_blank">
+                    <ion-icon name="logo-instagram"></ion-icon>
                 </a>
             </div>
 
