--- a/templates/blog/index.twig
+++ b/templates/blog/index.twig
@@ -2,14 +2,18 @@
 {% include 'partials/_nav.twig' %}
 <div class="container">
     <div class="row">
-        <div class="col-12 col-lg-8  p-0 video-featured-entry">
+        <div class="col-10 col-lg-8 mx-auto p-0 video-featured-entry">
             {% set videoEntries = craft.entries().section('blog').all() %}
             {% for entry in videoEntries %}
-                <div class="index-card">
+                <div class="index-card pb-2">
+                    {% set images = entry.pageEntyImage %}
+                    <a href="{{ entry.url }}" style=" background-image: url('{% for img in images %}{{ img.getUrl() }}{% endfor %}'); background-position: center; background-repeat: no-repeat; background-size: cover; height: 28vh; width: 100%;">
+                    </a>
+
                     {% set categories = entry.category %}
                     {% if categories|length %}
                         {% for rel in categories %}
-                            <a class="index-card-cat"> {{ rel.title }}</a>
+                            <a class="index-card-cat mt-5"> {{ rel.title }}</a>
                         {% endfor %}
                     {% endif %}
                     <h1 class="text-center"><a href="{{ entry.url }}">{{ entry.title }}</a></h1>
@@ -17,16 +21,16 @@
                     <hr>
                     <a class="index-card-cta" href="{{ entry.url }}">
                         <ion-icon name="book"></ion-icon>
-                        Read article</a>
+                       &nbsp; Read article</a>
                     <div class="index-card-socials">
                         <a href="https://www.facebook.com/TakeACloserLookMinistries1/" target="_blank">
                             <ion-icon name="logo-facebook"></ion-icon>
                         </a>
-                        <a href="https://twitter.com/share?url=https://takeacloserlookministries.com/video-test/&text=Video%20Test" target="_blank">
-                            <ion-icon name="logo-twitter"></ion-icon>
+                        <a href="https://m.youtube.com/channel/UCRCsP7R_HPvW8cG0rSMYvYg" target="_blank">
+                            <ion-icon name="logo-youtube"></ion-icon>
                         </a>
-                        <a href="https://www.pinterest.com/pin/create/button/?url=https://takeacloserlookministries.com/video-test/&media=&description=Video%20Test" target="_blank">
-                            <ion-icon name="logo-pinterest"></ion-icon>
+                        <a href="https://www.instagram.com/ryan.cataldo.3/" target="_blank">
+                            <ion-icon name="logo-instagram"></ion-icon>
                         </a>
                         <a href="mailto:?subject=I wanted to share this post with you from Take A Closer Look Ministries &amp;body=Video Test    https://takeacloserlookministries.com/video-test/" title="Email to a friend/colleague">
                             <ion-icon name="mail"></ion-icon>
